[tool.poetry]
name = "twitter_bot"
version = "0.1.0"
description = ""
authors = ["serkef <sergiokef@gmail.com>"]
readme = "README.md"
packages = [
    {include="twitter"}
]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.11.0"
tweepy = "^3.8.0"
selenium = "^3.141.0"

[tool.poetry.scripts]
monitor = 'twitter.monitor:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
